syntax = "proto3";

package file;

option go_package = "github.com/binary-h0/grpc-ex/ex4/proto;file";

service FileService {
  rpc UploadFile(stream FileChunk) returns (UploadStatus);
  rpc DownloadFile(FileRequest) returns (stream FileChunk);
}

message FileChunk {
  string filename = 1;  // File name
  bytes content = 2;    // Chunk of file content
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message FileRequest {
  string filename = 1;  // File name to download
}